--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
+<app-nav-bar></app-nav-bar>
+<br />
 <div class="container">
-  <app-course-list></app-course-list>
+  <router-outlet></router-outlet>
 </div>
