--- a/src/app/courses/course-list/course-list.component.html
+++ b/src/app/courses/course-list/course-list.component.html
@@ -20,7 +20,7 @@
   </thead>
   <tbody>
     <tr *ngFor="let course of filteredCourses">
-      <td><img [src]="course.imageURL" alt="forms" width="40" height="40"></td>
+      <td><img [src]="course.imageUrl" alt="forms" width="40" height="40"></td>
       <td>{{course.name}}</td>
       <td>{{course.price}}</td>
       <td>{{course.code}}</td>
@@ -32,6 +32,9 @@
         <a [routerLink]="['/courses/info', course.id]" class="btn btn-primary">
           Edit
         </a>
+        <button class='btn btn-danger ms-2' (click)="deleteById(course.id)">
+          Delete
+        </button>
       </td>
     </tr>
   </tbody>
